--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
     height: 496px; */
     width: 90%;
     height: 90%;
-    background-color: aquamarine;
+
+    /* background-color: aquamarine; */
+    border: 1px solid black;
 
     /* padding: 5px; */
 
@@ -17,13 +19,13 @@ body {
     /* grid-gap: 1px; */
 }
 
-.container div {
-    background-color: gray;
-    /* width: 26px;
+/* .container div { */
+/* background-color: gray; */
+/* width: 26px;
     height: 26px; */
-    /* border: 2px solid black; */
-    /* margin: 5px; */
-}
+/* border: 2px solid black; */
+/* margin: 5px; */
+/* } */
 
 /* .square-hover {
     background-color: black;
